# urban-green

./: .gitattributes  .gitignore  LICENSE  README.md  README.md.bak
R_project/: QGIS_Darstellung.qgz
R_project/.Rproj.user/B1BFB16F/sources/prop/: CC1B192E  INDEX
R_project/.Rproj.user/B1BFB16F/sources/session-fe9ef919/: 2B203B62  2B203B62-contents  E344F38B
R_project/.Rproj.user/shared/notebooks/: paths
R_project/output/: ortho1_a.gpkg
data/alkis-usage/: Nutzung.shx
data/nbg_bezirke/: nbg_Bezirk_mp.dbf  nbg_Bezirk_mp.prj  nbg_Bezirk_mp.sbn  nbg_Bezirk_mp.sbx  nbg_Bezirk_mp.shp  nbg_Bezirk_mp.shp.xml  nbg_Bezirk_mp.shx
data/open-data-orthophoto/: 32649_5479.tif  32649_5480.tif  32650_5479.tif  32650_5480.tif  32651_5479.tif  32651_5480.tif  segmentation_merge.tif  segmentation_merge_1_0.tif
data/result-aklis-usage-green/: green.gpkg  green_districts.gpkg  green_districts.xlsx  green_usage.xlsx
data/segmentation-ir/: 649000_5479000_Results.gpkg  649000_5479000_results.tif  649000_5480000_Results.gpkg  649000_5480000_results.tif  650000_5479000_Results.gpkg  650000_5479000_results.tif  650000_5480000_Results.gpkg  650000_5480000_results.tif  651000_5479000_Results.gpkg  651000_5479000_results.tif  651000_5480000_Results.gpkg  651000_5480000_results.tif
geojson_export/: pyproject.toml
geojson_export/geojson_export/: main.py
persentation/: green_districts_and_usage.pptx
